--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <section>
+    <div class="container">
+      <img class="phones" src="images/phones.png" alt="phones">
+      <div class="content">
+        <div class="instandlog">
+          <div class="instagram" >
+              <img src="images/brand.png" alt="instagram">
+          </div>
+          <div class="login">
+              <img src="images/home.png" alt="home">
+              <a href="">Log in</a>
+          </div>
+        </div>
 
-  Capture and Share the World's Moments
+        <div class="text">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="stores">
+            <img src="images/badge-iphone.png" alt="iphone">
+            <img src="images/badge-android.png" alt="android">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <nav class="nav">
+    <div>
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <a class="instalink" href="#">&copy; 2014 Instagram</a>
+    </div>
+  </nav>
 </body>
 </html>
