--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="backgroundColor">
+  </div>
+  <div id="main">
+    <div id="phone" class="left">
+      <img class="phoneImg" src="./images/phones.png">
+    </div>
+    <div id="information">
+      <div class="topInfo">
+        <img src="./images/brand.png">
+        <button class="loginBtn"><img src="./images/home.png">Log in</button>
+      </div>
+      <div class="textInfo">
+        <h2>Capture and Share <br>the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life <br>with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look a<br>nd feel, then post to Instagram &mdash; it's that easy. You can <br>even share to Facebook, Twitter, Tumblr and more. It's a <br>new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div>
+        <img src="./images/badge-iphone.png" alt="Download on the App Store">
+        <img src="./images/badge-android.png" alt="Get it on Google Play">
+      </div>
+    </div>
+  </div>
+  <div class="clear"></div>
+  <footer>
+    <div>
+      <ul>
+        <li class="left">About Us</li>
+        <li class="left">Support</li>
+        <li class="left">Blog</li>
+        <li class="left">Press</li>
+        <li class="left">API</li>
+        <li class="left">Jobs</li>
+        <li class="left">Privacy</li>
+        <li class="left">Terms</li>
+        <li class="left">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
