--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  
+<header class="header">
+  <div class="container"></div>
+  <img src="images/brand.png">
+</div>
+<
+</header>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<section class="container">
+    <img src="images/phones.png" >
+  <div class="content-box">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <h2>Capture and Share the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<p>
+
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+  <p>Oh yeah, did we mention it's free?</p>
+
+  </div>
+
+  </section>
 
   Download on the App Store
   Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<footer class="footer">
+  <div class="container">
+  <ul>
+  <li><a href="#">About Us</a></li>
+ <li> <a href="#">Support</a></li>
+  <li><a href="#">Blog</a></li>
+  <li><a href="#">Press</a></li>
+  <li><a href="#">API</a></li>
+  <li><a href="#">Jobs</a> </li>
+  <li><a href="#">Privacy</a></li>
+  <li><a href="#">Terms</a></li>
+</ul>
+  <p>&copy; 2014 Instagram</p>
+  </div>
+  </footer>
 </body>
+
+
 </html>
