--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
-  Instagram
+  <!-- Most Outer Container -->
+  <div class="upper-blue"></div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+    <!-- Landing Image: Phone -->
+    <div class="left-container">
+      <img src="images/phones.png" alt="phones" class="landing-img">
+    </div>
+    <!-- Right Side Container -->
+    <div class="right-container">
+      <!-- Header Container -->
+      <div class="header">
+        <div>
+          <img src="images/brand.png" alt="Instagram Brand Logo" class="header-logo">
+        </div>
+        <div class="log-in-btn">
+          <img src="images/home.png" alt="home" class="home">
+          <a href="#">Log in</a>
+        </div>
+      </div>
+      <!-- Content Container -->
+      <div class="content">
+        <h1><span>Capture and Share </span><span>the World's Moments</span></h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="download">
+          <img src="images/badge-iphone.png" alt="iphone">
+          <img src="images/badge-android.png" alt="android">
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="footer">
+    <ul class="footer-list">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
