--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="back"></div>
+  <div class="img-mov"></div>
 
-  Capture and Share the World's Moments
+<div class="instagram-image"></div>
+  
+<div class="box-capture"><h3>Capture and Share <br> the World's Moments</h3>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
 
-  Oh yeah, did we mention it's free?
+  <br>Oh yeah, did we mention it's free?</p>
 
   Download on the App Store
   Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</div>
+<div class="clearfix">
+<footer>
+  <ol>
+    <ul>About Us</ul>
+    <ul>Support</ul>
+    <ul>Blog</ul>
+    <ul>Press</ul>
+    <ul>API</ul>
+    <ul>Jobs</ul>
+    <ul>Privacy</ul>
+    <ul>Terms</ul>
+    <ul>&copy; 2014 Instagram</ul>
+</ol>
+</footer>
+</div>  
 </body>
 </html>
