--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,33 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="wraper"></div>
+<img id="phones" src="images/phones.png">
+<div id="logIn">
+    <img src="images/brand.png"> 
+    <button>
+      <img id="icon" src="https://static.thenounproject.com/png/7757-200.png">
+      Log In
+    </button>
+  </div>
+<div id="content">
+  <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+</p>
+<p>
   Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+<div id="brands">
+  <img src="images/badge-iphone.png">
+  <img src="images/badge-android.png">
+</div>
+</div>
+  <footer>
   About Us
   Support
   Blog
@@ -27,5 +39,6 @@
   Terms
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
