--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="css/main.css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div id="fondo">
+  </div>
+  <div  id="phones">
+    <img src="images/phones.png">
+  </div>
+  <div id="content">
+    <div>
+      <img src="images/brand.png">
+      <button id="boton"><img src="images/home.png"> Log in</button>
+    </div>
+    <div>
+      <img id="frame" src="images/frame.png">
+    <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </div>
+    <div id="badges">
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
+  </div>
+  <div id="prefoot">
+  </div>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="copy">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
