--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="background-top"></div>
+  <div class="content">
+      <img src="images/phones.png" alt="phone-image" class="phones">
+      <main class="container">
+              <img src="images/brand.png" alt="Instagram Logo">
+              <button class="login-button"><img src="/images/home.png">Log in</button>
+              <div class="text">
+                  <h2>Capture and Share the World's Moments</h2>
+                  <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your 
+                    life with friends and family.</p>
+                  <p>Take a picture or video, choose a filter to transform its 
+                    look and feel, then post to Instagram &mdash; it's that easy. 
+                    You can even share to Facebook, Twitter, Tumblr and more. 
+                    It's a new way to see the world.
+                  </p>
+                  <p class="last-p">Oh yeah, did we mention it's free?</p>
+                  <a href="#"><img src="/images/badge-iphone.png" alt="Download on Apple Store"></a>
+                  <a href="#"><img src="/images/badge-android.png" alt="Download on Google Play"></a>
+              </div>
+      </main>
+      <div class="clearfix"></div>
+      <footer>
+            <ul class="footer-links">
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">API</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li>&copy; 2014 Instagram </li>
+              </ul>
+                 
+        </footer>
+  </div>
 </body>
 </html>
