Reset & Main CSS Added & HTML Structured - Exercise Completed

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="container">
+    <div class="col col-40">
+      <img src="images/phones.png" alt="iPhones">
+    </div>
+    <div class="col col-60">
+      <header>
+        <img src="images/brand.png" alt="Logo">
+        <button><img src="./images/home.png" alt="Home Icon">Log in</button>
+      </header>
+      <div class="main">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="app-links">
+          <a href="#"><img src="images/badge-iphone.png" alt="Get it on App Store" class="col"></a>
+          <a href="#"><img src="images/badge-android.png" alt="Get it on Play Store"></a>
+        </div>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+  </div>
+  <!--Footer-->
+  <footer>
+    <ul>
+      <a href="#">
+        <li>About Us</li>
+      </a>
+      <a href="#">
+        <li>Support</li>
+      </a>
+      <a href="#">
+      <li>Blog</li>
+      </a>
+      <a href="#">
+        <li>Press</li>
+      </a>
+      <a href="#">
+        <li>API</li>
+      </a>
+      <a href="#">
+        <li>Jobs</li>
+      </a>
+      <a href="#">
+        <li>Privacy</li>
+      </a>
+      <a href="#">
+        <li>Terms</li>
+      </a>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
