first version instagram clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,71 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" media="all" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="top-background-c">
+    <div class="container1 box1"> <!--Box containing middle items-->
+      <div> <!--Image Phones-->
+        <img src="../starter-code/images/phones.png">
+      </div>
+      <div class="container2 padding-box-1"> <!-- Logo and text and store logo -->
+        <div class="container1 center"> <!-- Instagram Logo and log in button-->
+          <div> <!-- logo brand --> 
+            <img src="../starter-code/images/brand.png">
+          </div>
+          <div>
+            <button class="btn1"><img class="padding3" src="../starter-code/images/home.png">Log in</button>
+          </div>
+        </div>
+        <div class="border-type1 background-c1"> <!--Text and store logos-->
+          <div class="padding1"> <!--Text -->
+            <h3>Capture and Share <br> the World's Moments</h3>
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share 
+              your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform 
+              its look and feel, then post to Instagram &mdash; it's 
+              that easy. You can even share to Facebook, Twitter, 
+              Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div> 
+          <div class="container1 padding1"><!--Store logos-->    
+            <img class="logo-pad1" src="../starter-code/images/badge-iphone.png">
+            <img class="logo-pad1" src="../starter-code/images/badge-android.png">
+          </div>   
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
+<footer class="container1 margin1 position-abs"> <!--Footer-->
+  <div class="padding1 font-weight1 font-color1">
+    About Us
+  </div>
+  <div class="padding1 font-weight1 font-color1">
+    Support
+  </div>
+  <div class="padding1 font-weight1 font-color1">
+    Blog
+  </div>
+  <div class="padding1 font-weight1 font-color1">
+    Press
+  </div>
+  <div class="padding1 font-weight1 font-color1">
+    API
+  </div>
+  <div class="padding1 font-weight1 font-color1">
+    Jobs
+  </div>
+  <div class="padding1 font-weight1 font-color1">
+    Privacy
+  </div>
+  <div class="padding1 font-weight1 font-color1">
+    Terms
+  </div>
+  <div class="padding1 font-weight1 font-color2">
+    &copy; 2014 Instagram    
+  </div>
+</fotter>
 </html>
