--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <div class="div_p">
+      <div class="phone"><img src="images/phones.png" alt="phones" /></div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      <div>
+        <img src="images/brand.png" alt="Instagram" />
+        <button id="log" class="button">
+          <img src="images/home.png" alt="" class="house" />Log in
+        </button>
+      </div>
+      <div class="div_2">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with
+          friends and family. <br /><br />
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world. Oh yeah, did we mention it's free?
+        </p>
+        <img
+          src="images/badge-iphone.png"
+          alt="Download on the App Store"
+          class="img_app"
+        />
+        <img
+          src="images/badge-android.png"
+          alt="Get it on Google Play"
+          class="img_app"
+        />
+      </div>
+    </div>
+    <div class="clearfix"></div>
+    <footer>
+        <ul class="list">
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+      <span class="copy">&copy;2014 Instagram</span>
+    </footer>
+  </body>
 </html>
