--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -36,18 +36,16 @@
 
 <footer>
   <!-- Seção Footer -->
-<section id="footer">
- <div>
-    <ul>
-        <li><a class="link" href='#aboutus'>About Us</a></li>
-        <li><a class="link" href='#support'>Support</a></li>
-        <li><a class="link" href='#blog'>Blog</a></li>
-        <li><a class="link" href='#press'>Press</a></li>
-        <li><a class="link" href='#api'>API</a></li>
-        <li><a class="link" href='#jobs'>Jobs</a></li>
-        <li><a class="link" href='#privacy'>Privacy</a></li>
-        <li><a class="link" href='#blog'>Blog</a></li>
-      </ul>
+ <div id="footer">     
+        <a class="link" href='#aboutus'>About Us</a>
+        <a class="link" href='#support'>Support</a>
+        <a class="link" href='#blog'>Blog</a>
+        <a class="link" href='#press'>Press</a>
+        <a class="link" href='#api'>API</a>
+        <a class="link" href='#jobs'>Jobs</a>
+        <a class="link" href='#privacy'>Privacy</a>
+        <a class="link" href='#blog'>Blog</a>
+        <a>&copy; 2014 Instagram</a>    
   <!-- <nav>
    About Us
    Support
@@ -58,9 +56,8 @@
    Privacy
    Terms
   </nav> -->
-  <p>&copy; 2014 Instagram</p>  
- </div>
-</section>  
+  
+ </div>  
 </footer>
 </body>
 </html>
