Primera versión de la web

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="background-blue"></div>
+  <div id="phone">
+    <img src="images/phones.png" alt="phone">
+  </div>
 
-  Capture and Share the World's Moments
+ <div id="information">
+  
+  <div>
+    <img src="images/brand.png" alt="logo image">
+    <button class="login"><img src="images/home.png" alt=""> Log in</button>
+  </div>
+  
+  <div>
+  <img class="background-white" src="images/frame.png" alt="">
+  <h1>Capture and Share <br>the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="budgets">
+  <img src="images/badge-iphone.png" alt="Download on the App Store">
+  <img src="images/badge-android.png" alt="Get it on Google Play">
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </div> <div class="clearfix"></div>
 
-  &copy; 2014 Instagram
+  <footer>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li class="li-brand">&copy; 2014 Instagram</li>
+  </ul>
+ 
+  
+</footer>
 </body>
 </html>
