--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,60 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="instagram.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="fondoazul">
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div>
+  <img class="phone" src="/Users/CarlosIM/IronHack/day2/daily/lab-css-instagram-clone/starter-code/images/phones.png">
+</div>
 
-  Oh yeah, did we mention it's free?
+<div class="logoyhome">
 
-  Download on the App Store
-  Get it on Google Play
+  <img class="logo" src="/Users/CarlosIM/IronHack/day2/daily/lab-css-instagram-clone/starter-code/images/brand.png">
+  
+  <button class="home"><img src="/Users/CarlosIM/IronHack/day2/daily/lab-css-instagram-clone/starter-code/images/home.png"></img> Log in</button>
+  
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
 
-  &copy; 2014 Instagram
+<div class="degradado">
+
+  <h2 id="capture">Capture and Share<br> the World's Moments</h2>
+  <div class="parrafos">
+    <p>  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+    </p>
+    <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.  
+    </p>
+    <p>  Oh yeah, did we mention it's free?
+    </p>
+  </div>
+  <button class="btn" id="btn1"></button>
+  <button class="btn" id="btn2"></button>
+  
+</div>  
+
+
+  <footer>
+
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li id="copyrigth">ºcopy; 2014 Instagram</li>
+
+  </footer>
+  
+
 </body>
 </html>
