--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+  <section class="container">
+      <img src="images/phones.png" alt="phones" class="block col phones">
+    <article class="col col-right">
+      <div>
+        <img src="images/brand.png" alt="brand">
+        <a href="#" class="link-btn"><img src="images/home.png" alt="home" class="home">   Log in</a>
+      </div>
+      <div class="background text"> 
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div>
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <img src="images/badge-android.png" alt="Get it on Google Play">
+      </div>
+      <div class='clearfix'>
+      </div>
+    </article>
+  </section>
+  <div class="clearfix">
+  </div>
+  <footer class="container">
   About Us
   Support
   Blog
@@ -27,5 +39,6 @@
   Terms
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
