imagenes directorio camcambiadas

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,16 +13,15 @@
 
 
 <div>
-  <img class="phone" src="/Users/CarlosIM/IronHack/day2/daily/lab-css-instagram-clone/starter-code/images/phones.png">
+  <img class="phone" src="./images/phones.png">
 </div>
 
 <div class="logoyhome">
 
-  <img class="logo" src="/Users/CarlosIM/IronHack/day2/daily/lab-css-instagram-clone/starter-code/images/brand.png">
+  <img class="logo" src="./images/brand.png">
   
-  <button class="home"><img src="/Users/CarlosIM/IronHack/day2/daily/lab-css-instagram-clone/starter-code/images/home.png"></img> Log in</button>
+  <button class="home"><img src="./images/home.png"></img> Log in</button>
   
-
 </div>
 
 <div class="degradado">
@@ -36,6 +35,7 @@
     <p>  Oh yeah, did we mention it's free?
     </p>
   </div>
+  
   <button class="btn" id="btn1"></button>
   <button class="btn" id="btn2"></button>
   
