--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class= "contenedor">
+    <div class="floatLeft">
+        <img src="images/phones.png" alt="Telefono">
+    </div>
+    <div class="caja">
+      <div class="altura">
+       <div class="floatLeft logoInst">
+          <img src="images/brand.png" alt="Logo Instagram">
+        </div>
+        <div class="floatRight boton">
+         <img class="imgBtn" src="images/home.png" alt="Login">Login
+        </div>
+      </div>
+       <div class="fondo">
+           <h1>
+            Capture and Share <br>the World's Moments
+          </h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+           <div class="descargas">
+              <img src="images/badge-iphone.png" alt="App Store">
+              <img src="images/badge-android.png" alt="Google Play">
+           </div>
+          
+        </div>
+    </div>
+    <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li class="copyrigth">@2014 INSTAGRAM</li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
