--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div class="generalBox">
+      <img src="../starter-code/images/brand.png" alt="Instagram Logo" />
+      <button>log in</button>
+      <div class="secondBox">
+        <h1>
+          Capture and Share <br />
+          the World's Moments
+        </h1>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with
+          friends and family. Take a picture or video, choose a filter to
+          transform its look and feel, then post to Instagram &mdash; it's that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a
+          new way to see the world. Oh yeah, did we mention it's free?
+        </p>
+        <div class="shortcuts">
+          <img
+            src="../starter-code/images/badge-iphone.png"
+            alt="Download on the App Store"
+          />
+          <img
+            src="../starter-code/images/badge-android.png"
+            alt="Get it on Google Play"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <ol>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ol>
+    </div>
+    &copy; 2014 Instagram
+  </body>
 </html>
