--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="css/main.css"
+    rel="stylesheet" type="text/css">
+
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="first">
+    <div class="brand"><img src="images/phones.png"width="100%"></div>
+    <img src="images/brand.png" alt="logo instagram">
+  <button>click me</button>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section id="text"><h2>Capture and Share the World's Moments</h2>
+    
+  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and fun way to share your life<br> with friends and family.<br><br>
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+  </section>
+</div>
+  <img src="images/badge-iphone.png"alt="Download on the App Store">
+  <img src="images/badge-android.png"alt="Get it on Google Play">
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+       <li>Jobs</li>
+       <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </div>
+  
 </body>
 </html>
