--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <section class="firstFrame">
+    <img src="css/images/phones.png" alt="phones">
+  </section>
+  <section class="secondFrame">
+    <div>
+      <img src="css/images/brand.png" alt="Instagram">
+      <button>Log in</button>
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="whiteFrame">
+      <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+      Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+      <img class="ios" src="css/images/badge-iphone.png" alt="Download on the App Store">
+      <img class="android" src="css/images/badge-android.png" alt="Get it on Google Play">
+    </div>
+</section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
 
-  &copy; 2014 Instagram
+    &copy; 2014 Instagram
+  </footer>
+  
 </body>
 </html>
