add some comments

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,27 +5,22 @@
   <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
-  <!-- Most Outer Container -->
   <div class="upper-blue"></div>
 
   <div class="container">
-    <!-- Landing Image: Phone -->
+    <!-- Left Side Container -->
     <div class="left-container">
       <img src="images/phones.png" alt="phones" class="landing-img">
     </div>
     <!-- Right Side Container -->
     <div class="right-container">
-      <!-- Header Container -->
       <div class="header">
-        <div>
-          <img src="images/brand.png" alt="Instagram Brand Logo" class="header-logo">
-        </div>
+        <div><img src="images/brand.png" alt="Instagram Brand Logo" class="header-logo"></div>
         <div class="log-in-btn">
           <img src="images/home.png" alt="home" class="home">
           <a href="#">Log in</a>
         </div>
       </div>
-      <!-- Content Container -->
       <div class="content">
         <h1><span>Capture and Share </span><span>the World's Moments</span></h1>
         <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
