--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <main>
+  <img src="images/phones.png" alt="phones">
 
-  Capture and Share the World's Moments
+  <div class="right-side">
+    <div class="small-header">
+  <img src="images/brand.png" alt="logo">
+      <button>
+  <img src="images/home.png" alt="home">
+  <span>Log in</span>
+      </button>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="content">
+  <h2>Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <img src="images/badge-iphone.png" alt="iphone">
+  <img src="images/badge-android.png" alt="android">
+      </div>
+  </div>
+  </main>
+  <footer>
+    <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+ <li>Privacy</li>
+ <li>Terms</li>
+    </ul>
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
