--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+<main class="container">
+  <div class="top">
+      <img src="./images/phones.png" alt="">
+  
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="content">
+    <div class="insta-logo">
+      <img src="./images/brand.png" alt="">
+      <button><img src="./images/home.png" alt="">Login</button>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="infobox">
+        Capture and Share the World's Moments
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      
+        Oh yeah, did we mention it's free?
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="buttons">
+      <img src="./images/badge-iphone.png" alt="">
+      <img src="./images/badge-android.png" alt="">
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
-
+  </div>
+</main>
+<footer>
   About Us
   Support
   Blog
@@ -27,5 +45,6 @@
   Terms
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
