--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="./css/main.css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="blue"></div>
+    <div> 
 
-  Capture and Share the World's Moments
+      <div class="phones"> <img src="./images/phones.png"> </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <header> <img src="./images/brand.png"> <img src="./images/home.png"> </header>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class="first">
 
-  Oh yeah, did we mention it's free?
+          <div>
+  <h1> <strong> Capture and Share <br>the World's Moments </strong> </h1>
+  <div>
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <p>Oh yeah, did we mention it's free?</p>
+  </div>
+          </div>
+        
+  <img src="./images/badge-iphone.png">
+  <img src="./images/badge-android.png">
+      </div>   
+    </div>
 
-  &copy; 2014 Instagram
+    <footer>
+   <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li class="IG">&copy; 2014 Instagram</li>
+   </ul>
+    </footer>
 </body>
 </html>
