replaced footer divs with ul

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -40,33 +40,17 @@
   </div>
 </body>
 
-<footer class="container1 margin1 position-abs"> <!--Footer-->
-  <div class="padding1 font-weight1 font-color1">
-    About Us
-  </div>
-  <div class="padding1 font-weight1 font-color1">
-    Support
-  </div>
-  <div class="padding1 font-weight1 font-color1">
-    Blog
-  </div>
-  <div class="padding1 font-weight1 font-color1">
-    Press
-  </div>
-  <div class="padding1 font-weight1 font-color1">
-    API
-  </div>
-  <div class="padding1 font-weight1 font-color1">
-    Jobs
-  </div>
-  <div class="padding1 font-weight1 font-color1">
-    Privacy
-  </div>
-  <div class="padding1 font-weight1 font-color1">
-    Terms
-  </div>
-  <div class="padding1 font-weight1 font-color2">
-    &copy; 2014 Instagram    
-  </div>
+<footer class="margin1 position-abs"> <!--Footer-->
+  <ul class="container1 font-color1 font-weight1">
+    <li class="padding1">About Us</li>
+    <li class="padding1">Support</li>
+    <li class="padding1">Blog</li>
+    <li class="padding1">Press</li>
+    <li class="padding1">API</li>
+    <li class="padding1">Jobs</li>
+    <li class="padding1">Privacy</li>
+    <li class="padding1">Terms</li>
+    <li class="padding1">&copy; 2014 Instagram </li>
+  </ul>
 </fotter>
 </html>
