--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="main">
+    <div class="box-screenshot">
+      <img src="images/phones.png" alt="phones">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="box-content">
+      <div class="header-logo">
+          <img src="images/brand.png" alt="Instagram">
+      </div>
+      <div class="header-login">
+          <img src="images/home.png" alt="home"> Log in
+      </div>
+      <div class="clearfix"></div>
+      <!-- <img src="images/frame.png" alt="frame"> -->
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="text-box">
+        <div class="blue-header">
+          <b>Capture and Share<br >the World's Moments</b>
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+        Oh yeah, did we mention it's free?
+      </div>
+      <div class= "download-links">
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+      </div>
+    </div>
+    <div class="clearfix"></div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <nav class="footer-nav">
+    <ul class="footer">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    <div class="copyright">
+      &copy; 2014 Instagram
+    </div>
+  </nav>
 </body>
+
 </html>
