--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div class="container flex">
+      <div class="col pht"></div>
+      <div class="col content flex">
+        <nav class="nav">
+          <i class="brand"></i>
+          <button><img src="images/home.png" alt=""> <span> log in</span></button>
+        </nav>
+        <div class="text">
+          <h2>subtitulo</h2>
+          <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem
+            et natus eius! Officia, pariatur nemo aspernatur eos harum
+            repudiandae dolor error distinctio in omnis accusantium ad ex
+            aperiam, expedita quaerat.
+          </p>
+          <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+          <div class="store-icons flex">
+            <img src="images/badge-iphone.png" alt="">
+            <img src="images/badge-android.png" alt="">          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <ul class="footer-nav">
+        <li><a href="#">a</a></li>
+        <li><a href="#">b</a></li>
+        <li><a href="#">c</a></li>
+        <li><a href="#">d</a></li>
+        <li><a href="#">e</a></li>
+        <li><a href="#">f</a></li>
+        <li><a href="#">g</a></li>
+      </ul>
+      <small>&copy; 2014, Instagram</small>
+    </div>
+  </body>
 </html>
