--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <section>
+      <div><img src="./images/phones.png" /></div>
 
-  Capture and Share the World's Moments
+      <div class="rightside">
+        <div class="logo">
+          <img src="./images/brand.png" />
+          <button>
+            <img src="./images/home.png" /> <a href="#0" class="link">Log in</a>
+          </button>
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="text">
+          <h1>Capture and Share <br />the World's Moments</h1>
+          <p>
+            Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share
+            your life with friends and family. </p>
+            <p>Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world. </p>
+            <p>Oh yeah, did we mention it's free? Download on the App Store Get it
+            on Google Play</p>
+          </p>
+        </div>
+        <div class="badges">
+          <img src="./images/badge-iphone.png" class="spaceImage" />
+          <img src="./images/badge-android.png" class="spaceImage" />
+        </div>
+      </div>
+    </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="grey">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
