--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-  Capture and Share the World's Moments
+    <title>Instagram</title>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <body>
+    <div class="bgtile">
+      <section class="content">
+        <img src="./images/phones.png" />
 
-  Oh yeah, did we mention it's free?
+        <div class="leftpadding">
+          <nav>
+            <img src="./images/brand.png" />
+            <button class="login">
+              <img src="./images/home.png" />&nbsp;&nbsp;Log in
+            </button>
+          </nav>
 
-  Download on the App Store
-  Get it on Google Play
+          <div class="frame">
+            <h1>
+              Capture and Share <br />
+              the World's Moments
+            </h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            <p>
+              Instagram is a <strong>fast</strong>,
+              <strong>beautiful</strong> and <strong>fun</strong> way to share
+              your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
 
-  &copy; 2014 Instagram
-</body>
+          <div class="toppadding leftpadding">
+            <img class="imagespacing" src="./images/badge-iphone.png" />
+            <img src="./images/badge-android.png" />
+          </div>
+        </div>
+      </section>
+
+      <footer>
+        <a href="#0">About us</a> <a href="#0">Support</a>
+        <a href="#0">Blog</a> <a href="#0">Press</a> <a href="#0">API</a>
+        <a href="#0">Jobs</a> <a href="#0">Privacy</a>
+        <a href="#0">Terms</a> &nbsp;&nbsp;&nbsp; &copy; 2014 INSTAGRAM
+      </footer>
+    </div>
+  </body>
 </html>
