--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <header class="header"></header>
+    <div class="image"></div>
 
-  Capture and Share the World's Moments
+    <section class="background-image">
+      <div id="container">
+        <div class="phones-image">
+          <img src="./images/phones.png" alt="phones" />
+        </div>
+        <div class="content-wrapper size">
+          <div class="top-logo ">
+            <div class="insta-logo"><img src="./images/brand.png" /></div>
+            <div class="log-button">
+              <img src="./images/home.png" /> <a href="#0">Log in</a>
+            </div>
+          </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+          <article class="text">
+            <div class="content size ">
+              <h2>Capture and Share the World's Moments</h2>
+              <p>
+                Instagram is a <strong>fast</strong>,<strong> beautiful </strong
+                >and <strong>fun</strong> way to share your life<br />
+                with friends and family.<br />
+                <br />
+                Take a picture or video, choose a filter to transform its
+                look<br />
+                and feel, then post to Instagram &mdash; it's that easy. You
+                can<br />
+                even share to Facebook, Twitter, Tumblr and more. It's a<br />
+                new way to see the world.<br />
+                <br />
+                Oh yeah, did we mention it's free?
+              </p>
+            </div>
+            <div class="app-play size">
+              <img src="./images/badge-iphone.png" alt="app-store-logo" />
+              <img src="./images/badge-android.png" alt="google-play-logo" />
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer size">
+        <a href="#0">About Us</a> <a href="#0">Support</a>
+        <a href="#0">Blog</a> <a href="#0">Press</a> <a href="#0">API</a>
+        <a href="#0">Jobs</a> <a href="#0">Privacy</a> <a href="#0">Terms</a>
+      </div>
+      <div class="insta"><p>© 2014 Instagram</p></div>
+    </footer>
+  </body>
 </html>
+
+Collapse
